Changed pom for jackson and added @JsonIgnore

--- a/Demo/src/main/webapp/WEB-INF/classes/application.properties
+++ b/Demo/src/main/webapp/WEB-INF/classes/application.properties
@@ -2,7 +2,7 @@
 hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 hibernate.show_sql = true
 hibernate.format_sql = true
-hibernate.createorupdate = create
+hibernate.createorupdate = update
 
 # Hikari DB Connection Settings
 #hikari.cachePrepStmts=true
